Updated and Uploaded to BinTray

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Overpass</string>
+    <string name="req_time">Request Time</string>
+    <string name="not_found">Found Nothing</string>
 </resources>
